<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/action_install_instance"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/nav_new_instance" />
    <item
        android:id="@+id/action_import_mods"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/nav_import_mods" />
    <item
        android:id="@+id/action_export_saves"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_export_saves" />
    <item
        android:id="@+id/action_import_saves"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/nav_import_saves" />
    <item
        android:id="@+id/action_export_layout"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/nav_export_layout" />
    <item
        android:id="@+id/action_import_layout"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_import_layout" />
    <item
        android:id="@+id/action_export_logs"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/nav_export_logs" />
    <item
        android:id="@+id/action_manage_storage"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_manage_storage" />
    <item
        android:id="@+id/action_updates"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_updates" />
    <item
        android:id="@+id/action_reddit"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_reddit" />
</menu>
